Killing custom CSS in bootstrap starter site style.less. Also making top navigation "static" instead of "fixed" to avoid anchor (#link) problems where bar covers anchor

--- a/Composite.StarterSite.Bootstrap.Core/Composite.StarterSite.Bootstrap.Core/Package/Frontend/Styles/style.less
+++ b/Composite.StarterSite.Bootstrap.Core/Composite.StarterSite.Bootstrap.Core/Package/Frontend/Styles/style.less
@@ -1,64 +1,3 @@
 ﻿@import "bootstrap/3.0.0/bootstrap.less";
-
-body {
-    padding-top: 60px;
-    padding-bottom: 40px;
-}
-
-.sidebar-nav {
-    padding: 9px 0;
- }
-
-.jumbotron {
-    padding: 15px 30px;
-}
-
-.slider-wrapper{
-    margin-bottom: 20px;
-}
-
-.nav-list {
-    padding-left: 15px;
-    padding-right: 15px;
-
-    > li {
-        > a {
-            margin-left: -15px;
-            margin-right: -15px;
-            padding: 3px 15px;
-        }
-    }
-
-    > .open > a {
-        background-color: @well-bg;
-    }
-
-    > .active > a,
-    > .active > a:hover,
-    > .active > a:focus {
-        color: @navbar-inverse-link-hover-color;
-        background-color: @brand-primary;
-    }
-}
-
-@media only screen and (max-width : 320px) {
-    .jumbotron h1 {
-        font-size: 30px;
-        margin: 0 0 10px 0;
-    }
-}
-
 @import "bootstrap/3.0.0/responsive-utilities.less";
 @import "VisualEditor.common.less";
-
-
-
-
-
-
-
-
-
-
-
-
